15.dec (la)
      - update CMakeLists.txt for Mac build & QtScript debugger
      - add "font exception" to GPL license see 
          http://n2.nabble.com/GPL-License-font-soundfont-demos-td4118724.html
       (ws)
      - rename Canvas() to ScoreView()
      - drop Viewer() class
13.dec (ws)
      - move state information from Score() to Canvas()
      - start code reorganization using QStateMachine
      - Qt Version 4.6 is now required
12.dec (db)
      - fix: Shift+3 (to add third below)
      - better sizing for clefs and breaks & spacer palette
      - remove "normal" channel from translation see http://www.musescore.org/en/node/3098
11.dec (db)
      - improved wording of style dialog (particularly the "Page" section)
      - significant number of capitalization/wording fixes
       (I don't plan to make more significant capitalization fixes until next dev. cycle)
9.dec (db)
      - use same name for palette title, Create menu item, and window title
      - use words "half, quarter, etc" instead of fractions "1/2, 1/4" for tuplet dialog
      (og)
      - exportly: fermatas on rests.
8.dec (db)
      - add pl and nb handbooks to installer
      - update polish translation from perotinus
      - add sound/TimGM6M.sf2 to installer (preferences not set yet)
6.dec (ws)
      - enable input focus for slider widgets
      - other tuplets dialog: user can now select the duration type of actual notes
      - fix: Tuplet crash 7:3
      - fix: pasting 2 measure on the last measure causes glitch
      - fix: crash removing last staff
      - fix: score view after close left-most tab and crash
5.dec (db)
      - commit Toby's patch for manual/ProcessHTML.py
       (offline mode, proper command line options, and general code cleanup)
3.dec (ws)
      - Reorganized layout of beams. They are not longer restricted to one measure.
        However beams spanning systems do not work yet.
3.dec (db)
      - Add spacer to Layout > Breaks & Spacer
      - Minor renaming