@@ -1,4 +1,9 @@
 15.dec (la)
+      - expose more metadata to plugin framework
+      - expose part (name, program, channel) to plugin framework
+      - clean a bit the plugin framework
+      - remove piano1.sf2 from the binary resources
+15.dec (la)
       - update CMakeLists.txt for Mac build & QtScript debugger
       - add "font exception" to GPL license see 
           http://n2.nabble.com/GPL-License-font-soundfont-demos-td4118724.html
